--- a/TEDs.yml
+++ b/TEDs.yml
@@ -351,64 +351,104 @@
   #        -
   #          interface_name: "DC-TIGO_Ufinet"
 
-  - name: Configuración de permiso 1.
-    fortios_firewall_policy:
-      vdom:  "{{ vdom }}"
-      state: "present"
-      firewall_policy:
-        action: "accept"
-        name: "TO MATRIZ"
-        policyid: "2"
-        schedule: "always"
-        srcintf:
-          -
-            name: "INSIDE"
-        dstintf:
-          -
-            name: "DC_TIGO"
-        srcaddr:
-          -
-            name: "LAN_SUCURSAL"
-        dstaddr:
-          -
-            name: "LAN_MATRIZ"
-        service:
-          -
-            name: "ALL"
-  - name: Configuración de permiso 2.
-    fortios_firewall_policy:
-      vdom:  "{{ vdom }}"
-      state: "present"
-      firewall_policy:
-        action: "accept"
-        name: "FROM MATRIZ"
-        policyid: "3"
-        schedule: "always"
-        srcintf:
-          -
-            name: "DC_TIGO"
-        dstintf:
-          -
-            name: "INSIDE"
-        srcaddr:
-          -
-            name: "LAN_MATRIZ"
-          -
-            name: "SSL-ITTI"
-          -
-            name: "Monitoreo_Technoma"
-        dstaddr:
-          -
-            name: "LAN_SUCURSAL"
-        service:
-          -
-            name: "ALL"
+  #- name: Configuración de permiso 1.
+  #  fortios_firewall_policy:
+  #    vdom:  "{{ vdom }}"
+  #    state: "present"
+  #    firewall_policy:
+  #      action: "accept"
+  #      name: "TO MATRIZ"
+  #      policyid: "2"
+  #      schedule: "always"
+  #      srcintf:
+  #        -
+  #          name: "INSIDE"
+  #      dstintf:
+  #        -
+  #          name: "DC_TIGO"
+  #      srcaddr:
+  #        -
+  #          name: "LAN_SUCURSAL"
+  #      dstaddr:
+  #        -
+  #          name: "LAN_MATRIZ"
+  #      service:
+  #        -
+  #          name: "ALL"
+  #- name: Configuración de permiso 2.
+  #  fortios_firewall_policy:
+  #    vdom:  "{{ vdom }}"
+  #    state: "present"
+  #    firewall_policy:
+  #      action: "accept"
+  #      name: "FROM MATRIZ"
+  #      policyid: "3"
+  #      schedule: "always"
+  #      srcintf:
+  #        -
+  #          name: "DC_TIGO"
+  #      dstintf:
+  #        -
+  #          name: "INSIDE"
+  #      srcaddr:
+  #        -
+  #          name: "LAN_MATRIZ"
+  #        -
+  #          name: "SSL-ITTI"
+  #        -
+  #          name: "Monitoreo_Technoma"
+  #      dstaddr:
+  #        -
+  #          name: "LAN_SUCURSAL"
+  #      service:
+  #        -
+  #          name: "ALL"
 
-  - name: Configuracion de ruta estatica.
-    fortios_router_static:
-      vdom:  "{{ vdom }}"
+  #- name: Configuracion de ruta estatica.
+  #  fortios_router_static:
+  #    vdom:  "{{ vdom }}"
+  #    state: "present"
+  #    router_static:
+  #      dst: "10.212.134.0 255.255.255.0"
+  #      device: "DC-TIGO_Ufinet"
+  #      comment: "FortiClient ITTI"
+
+  - name: Configuracion de BGP.
+    fortios_router_bgp:
+      vdom: "{{ vdom }}
       state: "present"
-      router_static:
-        dst: "10.212.134.0 255.255.255.0"
-        device: "DC-TIGO_Ufinet"
-        comment: "FortiClient ITTI"
+        router_bgp:
+          as: "65627"
+          router_id: "10.56.{{ num }}.2"
+          aggregate_address:
+            -
+              id: "1"
+              prefix: "10.50.{{ num }}.0 255.255.255.0"
+              summary_only: "enable"
+          neighbor:
+            -
+              ip: "10.56.{{ num }}.1"
+              soft-reconfiguration: "enable"
+              description: "DC-TIGO-UFINET"
+              remote_as: "65502"
+          network:
+            -
+              id: "1"
+              prefix: "10.50.{{ num }}.0 255.255.255.240"
+            -
+              id: "2"
+              prefix: "10.50.{{ num }}.16 255.255.255.240"
+            -
+              id: "3"
+              prefix: "10.50.{{ num }}.32 255.255.255.240"
+            -
+              id: "4"
+              prefix: "10.50.{{ num }}.48 255.255.255.240"
+
+  - name: Cambio de puerto web al 20443
+    fortios_system_global:
+      vdom:  "{{ vdom }}"
+      system_global:
+        admin_sport: "20443"
+    ansible.builtin.debug:
+      msg: Favor acceder al equipo por https://10.50.{{ num }}.49:20443
