--- a/FG-DCTigo.yml
+++ b/FG-DCTigo.yml
@@ -1,6 +1,6 @@
 ---
 - name: Configuracion de TED
-  hosts: TED  #FG-TED
+  hosts: FG-TED
   gather_facts: no
   collections:
    - fortinet.fortios
@@ -10,7 +10,7 @@
    vdom: "root"
    ansible_httpapi_use_ssl: yes
    ansible_httpapi_validate_certs: no
-   ansible_httpapi_port: 443
+   ansible_httpapi_port: 20443
    
   tasks:
   - name: VLAN{{ vlan }}.
