--- a/Backup-TED.yml
+++ b/Backup-TED.yml
@@ -15,6 +15,10 @@
   tasks:
   - name: Backup?
     fortios_configuration_fact:
-      vdom:  "{{ vdom }}"
-      system_global:
-        selector: firewall_address
+      selectors:
+        - selector: firewall_address
+          params:
+            name: "gmail.com"
+        - selector: system_interface
+        - selector: log_eventfilter
+          params: {}
