--- a/Backup-TED.yml
+++ b/Backup-TED.yml
@@ -27,6 +27,6 @@
  #    dest: './local.backup'
 
   - name: display output.
-    ansible.builtin.debug:
-      var: result
-      verbosity: 2
+    copy: 
+      content: "{{ backupinfo.stdout[0] }}"
+      dest: "tftp://192.168.167.85/asdf.txt"
