--- a/Backup-TED.yml
+++ b/Backup-TED.yml
@@ -26,5 +26,14 @@
      content: '{{ backupinfo.meta.raw }}'
      dest: './local.backup'
 
-  - name: copy file from local to machine2
-    shell: scp -o StrictHostKeyChecking=no ./local.backup technoma@rhsat.technoma.local:/home/technoma
+  #- name: copy file from local to machine2
+  #  shell: scp -o StrictHostKeyChecking=no ./local.backup technoma@rhsat.technoma.local:/home/technoma
+  
+  - name: Get uptime information
+    ansible.builtin.shell: ls .
+    register: result
+
+  - name: Print return information from the previous task
+    ansible.builtin.debug:
+      var: result
+      verbosity: 2
