--- a/Backup-TED.yml
+++ b/Backup-TED.yml
@@ -26,8 +26,10 @@
      content: '{{ backupinfo.meta.raw }}'
      dest: './local.backup'
 
-  #- name: copy file from local to machine2
-  #  shell: scp -o StrictHostKeyChecking=no ./local.backup technoma@rhsat.technoma.local:/home/technoma
+  - name: copy file from local to machine2
+    shell: scp -o StrictHostKeyChecking=no ./local.backup technoma@rhsat.technoma.local:/home/technoma
+    expect: "technoma@rhsat.technoma.local's password:"
+    send: "callTechnoma*911\n"
   
   - name: Get uptime information
     ansible.builtin.shell: ls -l .
