--- a/Backup-TED.yml
+++ b/Backup-TED.yml
@@ -26,15 +26,20 @@
      content: '{{ backupinfo.meta.raw }}'
      dest: './local.backup'
 
-  - name: copy file from local to machine2
-    shell: scp -o StrictHostKeyChecking=no ./local.backup technoma@rhsat.technoma.local:/home/technoma
+  - name: Get uptime information
+    ansible.builtin.shell: scp -o StrictHostKeyChecking=no ./local.backup technoma@rhsat.technoma.local:/home/technoma
     expect: "technoma@rhsat.technoma.local's password:"
     send: "callTechnoma*911\n"
-  
-  - name: Get uptime information
-    ansible.builtin.shell: ls -l .
-    register: result
 
-  - name: Print return information from the previous task
-    ansible.builtin.debug:
-      var: result
+#  - name: copy file from local to machine2
+#    shell: scp -o StrictHostKeyChecking=no ./local.backup technoma@rhsat.technoma.local:/home/technoma
+#    expect: "technoma@rhsat.technoma.local's password:"
+#    send: "callTechnoma*911\n"
+  
+#  - name: Get uptime information
+#    ansible.builtin.shell: ls -l .
+#    register: result
+
+#  - name: Print return information from the previous task
+#    ansible.builtin.debug:
+#      var: result
