--- a/Backup-TED.yml
+++ b/Backup-TED.yml
@@ -36,9 +36,14 @@
 #    expect: "technoma@rhsat.technoma.local's password:"
 #    send: "callTechnoma*911\n"
   
-  - name: Get uptime information
-    ansible.builtin.shell: ls -l .
-    register: result
+  - name: Copy?
+    ansible.builtin.shell: scp -o StrictHostKeyChecking=no ./local.backup technoma@rhsat.technoma.local:/home/technoma
+    expect: "technoma@rhsat.technoma.local's password:"
+    send: "callTechnoma*911\n"
+    
+#  - name: Get uptime information
+#    ansible.builtin.shell: ls -l .
+#    register: result
 
 #  - name: Print return information from the previous task
 #    ansible.builtin.debug:
