--- a/Backup-TED.yml
+++ b/Backup-TED.yml
@@ -43,7 +43,7 @@
   
   - name: Creando carpeta (Si todavia no existe).
     ansible.builtin.expect:
-      command: ssh -o StrictHostKeyChecking=no {{ serv }} "mkdir -p ./{{ status["meta"]["results"]["hostname"] }} #Agregar IP
+      command: ssh -o StrictHostKeyChecking=no technoma@{{ serv }} "mkdir -p ./{{ status["meta"]["results"]["hostname"] }} #Agregar IP
       responses:
         (?i)password: "callTechnoma*911"
   # you don't want to show passwords in your logs
@@ -51,7 +51,7 @@
     
   - name: Subiendo backup al repo.
     ansible.builtin.expect:
-      command: scp -o StrictHostKeyChecking=no ./{{ status["meta"]["results"]["hostname"] }}.conf {{ serv }}:/home/technoma/{{ ansible_date_time["date"] }}-{{ status["meta"]["results"]["hostname"] }}.conf
+      command: scp -o StrictHostKeyChecking=no ./{{ status["meta"]["results"]["hostname"] }}.conf technoma@{{ serv }}:/home/technoma/{{ ansible_date_time["date"] }}-{{ status["meta"]["results"]["hostname"] }}.conf
       responses:
         (?i)password: "callTechnoma*911"
   # you don't want to show passwords in your logs
