--- a/Backup-TED.yml
+++ b/Backup-TED.yml
@@ -47,7 +47,7 @@
       responses:
         (?i)password: "callTechnoma*911"
   # you don't want to show passwords in your logs
-    #no_log: true
+    no_log: true
     
   - name: Subiendo backup al repo.
     ansible.builtin.expect:
