--- a/ipatest.yml
+++ b/ipatest.yml
@@ -9,6 +9,13 @@
   # Ensure user pinky is present
   - ipauser:
       ipaadmin_password: techadmin1234
-      name: jorge
-      first: Jorge
-      last: Maidana
+      name: pinky
+      first: pinky
+      last: Acme
+      #uid: 10001
+      gid: 100
+      phone: "+555123457"
+      email: pinky@acme.com
+      passwordexpiration: "2023-01-19 23:59:59"
+      password: "no-brain"
+      update_password: on_create
