--- a/ipatest.yml
+++ b/ipatest.yml
@@ -21,8 +21,8 @@
       password: "no-brain"
       update_password: on_create
 
-  - name: Convertir pinky en admin.
-    ipasudorule:
-      ipaadmin_password: techadmin1234
-      name: test
-      user: pinky
+#   - name: Convertir pinky en admin.
+#    ipasudorule:
+#      ipaadmin_password: techadmin1234
+#      name: test
+#      user: pinky
