--- a/ipatest.yml
+++ b/ipatest.yml
@@ -10,9 +10,9 @@
   - name: Crear usuario.
     ipauser:
       ipaadmin_password: techadmin1234
-      name: {{ username }}
-      first: {{ nombre }}
-      last: {{ apellido }}
+      name: "{{ username }}"
+      first: "{{ nombre }}"
+      last: "{{ apellido }}"
       #uid: 10001
       gid: 1890400000
       phone: "+555123457"
