--- a/ipatest.yml
+++ b/ipatest.yml
@@ -14,7 +14,7 @@
       first: "{{ nombre }}"
       last: "{{ apellido }}"
       #uid: 10001
-      gid: 1890400000
+      #gid: 1890400000
       phone: "+555123457"
       email: pinky@acme.com
       passwordexpiration: "2023-01-19 23:59:59"
