--- a/ipatest.yml
+++ b/ipatest.yml
@@ -19,10 +19,10 @@
       email: pinky@acme.com
       passwordexpiration: "2023-01-19 23:59:59"
       password: "no-brain"
-      update_password: on_create
+    update_password: on_create
 
-#   - name: Convertir pinky en admin.
-#    ipasudorule:
-#      ipaadmin_password: techadmin1234
-#      name: test
-#      user: pinky
+  - name: Convertir pinky en admin.
+   ipasudorule:
+     ipaadmin_password: techadmin1234
+     name: test
+     user: "{{ username }}"
