--- a/ipatest.yml
+++ b/ipatest.yml
@@ -16,7 +16,7 @@
       #uid: 10001
       #gid: 1890400000
       phone: "+555123457"
-      email: pinky@acme.com
+      state: absent
       passwordexpiration: "2023-01-19 23:59:59"
       password: "no-brain"
       update_password: on_create
