--- a/ipatest.yml
+++ b/ipatest.yml
@@ -7,19 +7,25 @@
 
   tasks:
   # Ensure user pinky is present
-  - name: Crear usuario.
-    ipauser:
-      ipaadmin_password: techadmin1234
-      name: "{{ username }}"
+#   - name: Crear usuario.
+#     ipauser:
+#       ipaadmin_password: techadmin1234
+#       name: "{{ username }}"
 #       first: "{{ nombre }}"
 #       last: "{{ apellido }}"
-      #uid: 10001
-      #gid: 1890400000
+#       #uid: 10001
+#       #gid: 1890400000
 #       phone: "+555123457"
-       state: absent
 #       passwordexpiration: "2023-01-19 23:59:59"
 #       password: "no-brain"
 #       update_password: on_create
+
+  - name: Borrar usuario.
+    ipauser:
+      ipaadmin_password: techadmin1234
+      users:
+      - name: "{{ username }}"
+      state: absent
 
 #   - name: Convertir pinky en admin.
 #     ipasudorule:
