--- a/[ATLAS] Modificar.yml
+++ b/[ATLAS] Modificar.yml
@@ -13,18 +13,17 @@
       last: "{{ apellido }}"
       password: "{{ pass }}"
       update_password: on_create
-  
-  tasks:
+
   - name: Es admin
     ipasudorule:
       ipaadmin_password: techadmin1234
       name: test 
       user: "{{ username }}"
-    when: {{ admin }} == "SI"
-  tasks:
+    when: "{{ admin }}" == "SI"
+
   - name: No es admin 
     ipasudorule:
       ipaadmin_password: techadmin1234
       name: test
       user: ""
-  when: {{ admin }} == "NO"
+    when: "{{ admin }}" == "NO"
