--- a/[ATLAS] Modificar.yml
+++ b/[ATLAS] Modificar.yml
@@ -19,13 +19,11 @@
       ipaadmin_password: techadmin1234
       name: test 
       user: "{{ username }}"
-    when: 
-    - "{{ admin }}" == "SI"
+    when: "{{ admin }} == SI"
 
   - name: No es admin 
     ipasudorule:
       ipaadmin_password: techadmin1234
       name: test
       user: ""
-    when:
-    - "{{ admin }}" == "NO"
+    when: "{{ admin }} == NO"
