--- a/[ATLAS] Modificar.yml
+++ b/[ATLAS] Modificar.yml
@@ -23,7 +23,9 @@
       ipaadmin_password: techadmin1234
       name: test 
       user: "{{ username }}"
-    when: {{ admin }} == "{{ si }}"
+    assert: 
+      that:
+      - "{{ admin }}" == si
 
 #   - name: No es admin 
 #     ipasudorule:
